# domain/repositories/Review/action.go
@@ -7,5 +7,9 @@ type GetReviewByProduct interface {
 	GetReviewStatsByProduct(productID uint64) (float64, int, error)
 }
 type GetWithLimitReviewsAction interface {
-	GetWithLimit(ffset, limit uint64, productID uint64) ([]model.ProductReview, error)
+	GetWithLimit(offset, limit uint64, productID uint64) ([]model.ProductReview, error)
 }
+
+// type GetReviewWithLimitAction interface {
+// 	GetWithLimit(offset, limit uint64, productID uint64) ([]model.ProductReview, error)
+// }
