# domain/response/get_review.go
@@ -1,14 +1,9 @@
 package response
 
-import (
-	"github.com/phincon-backend/laza/domain/model"
-)
+import "github.com/phincon-backend/laza/domain/model"
 
-type ReqReview struct {
-	Products []model.ProductReview `json:"products"`
-	Result   []model.ProductReview `json:"result"`
-}
-
-func (ReqReview) TableName() string {
-	return "review"
+type GetReviews struct {
+	Avrg_Rating float64               `json:"rating_avrg"`
+	Total       int                   `json:"total"`
+	Reviews     []model.ProductReview `json:"products"`
 }
